--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    /* background: #f4f6f8; */
-    background: url('pkFlag.jpg');
     margin: 0;
     padding: 20px;
+    background: url("pkFlag.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .container {
